<resources>
    <string name="app_name">Gps.gpx</string>
    <string name="action_settings">Settings</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="rename_message">Enter a new name</string>
    <string name="rename_hint">Record name</string>
    <string name="delete_message">Are you sure to delete this record ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="deletion_complete">Deletion complete</string>
    <string name="deletion_canceled">Deletion canceled</string>
    <string name="empty_name_error">The name must be at least one character long</string>
    <string name="recording_notification_title">Recording location</string>
    <string name="recording_notification_content_text">Tap for more details</string>
    <string name="no_record">No record</string>
    <string name="gpstracker_notification_title">Recording location…</string>
    <string name="gpstracker_notification_content">Tap to open the app</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="canceled">Canceled</string>
    <string name="map">Map</string>
    <string name="statistics">Statistics</string>
    <string name="follow">Follow</string>
    <string name="stats">Stats</string>
    <string name="import_locations">Import</string>
    <string name="export_locations">Export</string>
    <string name="record">Record</string>
    <string name="clear_all">Clear all</string>
    <string name="confirmation">Are you sure ?</string>
    <string name="stats_total_distance">Total distance: %s</string>
    <string name="stats_total_time">Total time: %s</string>
    <string name="stats_recent_speed">Recent speed: %s</string>
    <string name="stats_average_speed">Average speed: %s</string>
    <string name="stats_min_speed">Min speed: %s</string>
    <string name="stats_max_speed">Max speed: %s</string>
    <string name="stats_nb_locations">Number of positions: %s</string>
    <string name="share_position">Share my position</string>
    <string name="find_me_here">Find me here:\n%s, %s</string>
    <string name="created">Created: %s</string>
    <string name="locations">%s locations</string>
    <string name="new_record_name">Record: %s</string>
    <string name="backup_file_name">backup : %s.gpx</string>
    <string name="checkpoint_reached">Checkpoint reached</string>
    <string name="stats_fragment_tag">Stats Fragment</string>
    <string name="statistics_title">Statistics</string>
    <string name="position_not_available">Position not available.</string>
    <string name="enter_new_name">Enter a new name here</string>
</resources>
