<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/activity_tracker_action_record"
          android:title="@string/record"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/activity_tracker_action_follow"
          android:title="@string/follow"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/activity_tracker_action_stats"
          android:title="@string/stats"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/activity_tracker_action_rename"
          android:title="@string/rename"
          app:showAsAction="never"/>

    <item android:id="@+id/activity_tracker_action_delete"
          android:title="@string/delete"
          app:showAsAction="never"/>

    <item android:id="@+id/activity_tracker_action_import"
          android:title="@string/import_locations"
          app:showAsAction="never"/>

<item android:id="@+id/activity_tracker_action_export"
          android:title="@string/export_locations"
          app:showAsAction="never"/>

</menu>